Check snapshot serial and basic structure after fetching
Not too happy with exception handling (introducing the exception
hierarchy + making it a runtime exception). Think this is a MVP.

SnapshotNotModifiedException needs to be a separate type because it
is not an error.